--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     <div class="content">
         <!-- Added id atributes to all sections for better navigation -->
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image for Search Engine Optimization" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO notebook placed on an office desk alongside items like coffee, pencils, and markers." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image for Online Reputation Management" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person holds their phone while looking at a laptop displaying a reputation diagram." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image for Social Media Marketing" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People sit at a desk with social media icons, while they examine a data chart on their iPad." />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -55,21 +55,21 @@
         <!-- Using semantic elements for the benefits -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation Image"/>
+            <img src="./assets/images/lead-generation.png" alt="Gear icon with an arrow pointing towards a dollar symbol."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Image"/>
+            <img src="./assets/images/brand-awareness.png" alt="Light bulb paired with a suit, symbolizing brand awareness."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management Image"></img>
+            <img src="./assets/images/cost-management.png" alt="Combination of gear and dollar symbols representing cost management."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
